@@ -1,7 +1,7 @@
 /*
  * $Id$
  *
- * Copyright (C) 2003-2009 JNode.org
+ * Copyright (C) 2003-2010 JNode.org
  *
  * This library is free software; you can redistribute it and/or modify it
  * under the terms of the GNU Lesser General Public License as published
@@ -91,7 +91,7 @@ public class Ext2FileSystem extends AbstractFileSystem<Ext2Entry> {
             // skip the first 1024 bytes (bootsector) and read the superblock
             // TODO: the superblock should read itself
             getApi().read(1024, data);
-            // superblock = new Superblock(data, this);
+            // superblock = new SuperBlock(data, this);
             superblock = new Superblock();
             superblock.read(data.array(), this);
 
@@ -329,7 +329,7 @@ public class Ext2FileSystem extends AbstractFileSystem<Ext2Entry> {
         int blockSize = superblock.getBlockSize();
         Block result;
 
-        Integer key = new Integer((int) (nr));
+        Integer key = Integer.valueOf((int) nr);
         synchronized (blockCache) {
             // check if the block has already been retrieved
             if (blockCache.containsKey(key)) {
@@ -387,7 +387,7 @@ public class Ext2FileSystem extends AbstractFileSystem<Ext2Entry> {
 
         Block block;
 
-        Integer key = new Integer((int) nr);
+        Integer key = Integer.valueOf((int) nr);
         int blockSize = superblock.getBlockSize();
         // check if the block is in the cache
         synchronized (blockCache) {
@@ -475,7 +475,7 @@ public class Ext2FileSystem extends AbstractFileSystem<Ext2Entry> {
             throw new FileSystemException("INode number (" + iNodeNr + ") out of range (0-" +
                     superblock.getINodesCount() + ")");
 
-        Integer key = new Integer(iNodeNr);
+        Integer key = Integer.valueOf(iNodeNr);
 
         log.debug("iNodeCache size: " + inodeCache.size());
 
@@ -598,7 +598,7 @@ public class Ext2FileSystem extends AbstractFileSystem<Ext2Entry> {
 
         // put the inode into the cache
         synchronized (inodeCache) {
-            Integer key = new Integer(iNodeNr);
+            Integer key = Integer.valueOf(iNodeNr);
             if (inodeCache.containsKey(key))
                 throw new FileSystemException("Newly allocated inode is already in the inode cache!?");
             else
@@ -896,7 +896,7 @@ public class Ext2FileSystem extends AbstractFileSystem<Ext2Entry> {
 
         // add the inode to the inode cache
         synchronized (inodeCache) {
-            inodeCache.put(new Integer(Ext2Constants.EXT2_ROOT_INO), iNode);
+            inodeCache.put(Integer.valueOf(Ext2Constants.EXT2_ROOT_INO), iNode);
         }
 
         modifyUsedDirsCount(0, 1);
