@@ -1,7 +1,7 @@
 /*
  * $Id$
  *
- * Copyright (C) 2003-2009 JNode.org
+ * Copyright (C) 2003-2010 JNode.org
  *
  * This library is free software; you can redistribute it and/or modify it
  * under the terms of the GNU Lesser General Public License as published
@@ -30,12 +30,12 @@ import java.net.SocketAddress;
 import java.net.SocketException;
 import java.net.SocketTimeoutException;
 
+import org.jnode.bootlog.BootLogInstance;
 import org.jnode.driver.Device;
 import org.jnode.driver.DeviceNotFoundException;
 import org.jnode.driver.DeviceUtils;
 import org.jnode.net.SocketBuffer;
 import org.jnode.net.ethernet.EthernetConstants;
-import org.jnode.system.BootLog;
 import org.jnode.util.Queue;
 
 /**
@@ -115,19 +115,19 @@ public abstract class AbstractDatagramSocketImpl extends DatagramSocketImpl impl
         }
         switch (option_id) {
             case IP_TOS:
-                return new Integer(tos);
+                return Integer.valueOf(tos);
             case SO_BINDADDR:
                 return laddr;
             case SO_BROADCAST:
-                return new Boolean(broadcast);
+                return Boolean.valueOf(broadcast);
             case SO_RCVBUF:
-                return new Integer(EthernetConstants.ETH_FRAME_LEN);
+                return Integer.valueOf(EthernetConstants.ETH_FRAME_LEN);
             case SO_SNDBUF:
-                return new Integer(EthernetConstants.ETH_FRAME_LEN);
+                return Integer.valueOf(EthernetConstants.ETH_FRAME_LEN);
             case SO_TRANSMIT_IF:
                 return (device == null) ? null : NetworkInterface.getByName(device.getId());
             case SO_TIMEOUT:
-                return new Integer(timeout);
+                return Integer.valueOf(timeout);
             default:
                 return doGetOption(option_id);
         }
@@ -185,7 +185,7 @@ public abstract class AbstractDatagramSocketImpl extends DatagramSocketImpl impl
     }
 
     protected void doSetOption(int option_id, Object val) throws SocketException {
-        BootLog.error("Unknown option " + option_id);
+        BootLogInstance.get().error("Unknown option " + option_id);
     }
 
     /**
